--- a/html/index.html
+++ b/html/index.html
@@ -2,12 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>前言</title>
+<title>html</title>
+<link rel="stylesheet" type="text/css" href="resources/css/base.css" />
 </head>
 <body>
 	
-	<div>
-		<img src="1.jpg" id="img" />
-	</div>
+	<table></table>
 </body>
 </html>
