--- a/微信官网/浙大一院微官网/浙大一院微官网.html
+++ b/微信官网/浙大一院微官网/浙大一院微官网.html
@@ -153,7 +153,7 @@
 					</div>
 					<div class="clr"></div>
 				</div>
-				<div style="color:#FAF5F5;">©&nbsp;2014&nbsp;浙江大学附属第一医院</div>
+				<div style="color:#FAF5F5;">©&nbsp;2015&nbsp;鄞州区第三医院</div>
 			</div>
 		</section>
 	</div>
@@ -288,22 +288,6 @@ document.addEventListener('WeixinJSBridgeReady', function onBridgeReady() {
 		});
 	});
 }, false);
-</script><script src="./浙大一院微官网_files/h.js" type="text/javascript"></script><script src="./浙大一院微官网_files/h.js" type="text/javascript"></script>
-<script type="text/javascript" src="./浙大一院微官网_files/ChatFloat.js"></script>
-<script type="text/javascript">
-var str_domain = location.href.split('/',4)[2];
-var boolIsTest = true;
-if(str_domain == 'zyyyapi.ucmed.cn/weixin/index.htm'){
-	boolIsTest = false;
-}
-new ChatFloat({
-        AId: '1071',
-        openid: "osXr8jjDLjP7eho1cOdt3O3Wkk9I",
-		top:150,
-		right:0,
-		IsTest:boolIsTest
-});
-</script>
 
 
     
