--- a/微信官网/html/index.html
+++ b/微信官网/html/index.html
@@ -13,10 +13,13 @@
 	<link rel="stylesheet" type="text/css" href="resources/css/ZoomPic.css" media="all">
 	<link rel="stylesheet" type="text/css" href="resources/css/weishouye.css">
 	<script type="text/javascript" src="resources/js/jquery.min.js"></script>
+	<script type="text/javascript" src="resources/js/mobileSlider.js"></script>
+	<!--
 	<script type="text/javascript" src="resources/js/ZoomPic.js"></script>
 	<script type="text/javascript" src="resources/js/rotate.js"></script>
 	<script type="text/javascript" src="resources/js/jquery.transform.js"></script>
 	<script type="text/javascript" src="resources/js/iscroll.js"></script>
+	-->
 </head>
 <body  onselectstart="return true;" ondragstart="return false;">
 	<div class="body" id="body">
@@ -24,13 +27,11 @@
 		<h1><img src="resources/imgs/logo.png" alt="鄞州区第三医院" /></h1>
 		<header style="overflow:hidden;">
 			<div class="clearfix">
-				<div id="focus_Box">
-					<span class="prev"></span>
-					<span class="next"></span>
+				<div id="scroll">
 					<ul>
-						<li><a onclick="return false;"><img src="resources/imgs/weixinlunbo01.jpg"></a></li>
-						<li><a onclick="return false;"><img src="resources/imgs/weixinlunbo02.jpg"></a></li>
-						<li><a onclick="return false;"><img src="resources/imgs/weixinlunbo03.jpg"></a></li>
+						<li><a href="http://www.163.com"><img src="resources/imgs/weixinlunbo01.jpg"></a></li>
+						<li><a href="http://www.163.com"><img src="resources/imgs/weixinlunbo02.jpg"></a></li>
+						<li><a href="http://www.163.com"><img src="resources/imgs/weixinlunbo03.jpg"></a></li>
 					</ul>
 				</div>
 			</div>
@@ -38,15 +39,14 @@
 		<div class="weixingwnr">
 			<div class="panel-body">
 				<ul>
-					<li><a href="#"><img src="resources/imgs/weixinbg09.png">智能分诊</a></li>
-					<li><a href="#"><img src="resources/imgs/weixinbg01.png">手机挂号</a></li>
-					<li><a href="#"><img src="resources/imgs/weixinbg02.png">取报告单</a></li>
-					<li><a href="#"><img src="resources/imgs/weixinbg03.png">专家查询</a></li>
-					<li><a href="#"><img src="resources/imgs/weixinbg10.png">门诊叫号</a></li>
-					<li><a href="#"><img src="resources/imgs/weixinbg04.png">停诊信息</a></li>
-					<li><a href="#"><img src="resources/imgs/weixinbg06.png">地图导航</a></li>
 					<li><a href="#"><img src="resources/imgs/weixinbg11.png">医院简介</a></li>
-					<li><a href="#"><img src="resources/imgs/weixinbg07.png">留言板</a></li>
+					<li><a href="#"><img src="resources/imgs/weixinbg10.png">医院公告</a></li>
+					<li><a href="#"><img src="resources/imgs/weixinbg03.png">专家查询</a></li>
+					<li><a href="#"><img src="resources/imgs/weixinbg07.png">在线咨询</a></li>
+					<li><a href="#"><img src="resources/imgs/weixinbg09.png">预防接种</a></li>
+					<li><a href="#"><img src="resources/imgs/weixinbg04.png">满意度调查</a></li>
+					<li><a href="#"><img src="resources/imgs/weixinbg01.png">自助挂号</a></li>					
+					<li><a href="#"><img src="resources/imgs/weixinbg02.png">报告查询</a></li>					
 				</ul>
 			</div>
 
@@ -74,4 +74,13 @@
 		</div>
 	</div>
 </body>
+<script type="text/javascript">
+$(function() {
+	var scroll = $("#scroll"),
+		w = scroll.parent().width(),
+		h = scroll.parent().height();
+	scroll.mobileSlider({width:w,height:h,during:2000});
+});
+	
+</script>
 </html>
