--- a/微信官网/html/index.html
+++ b/微信官网/html/index.html
@@ -39,7 +39,7 @@
 		<div class="weixingwnr">
 			<div class="panel-body">
 				<ul>
-					<li><a href="#"><img src="resources/imgs/weixinbg11.png">医院简介</a></li>
+					<li><a href="医院简介.html"><img src="resources/imgs/weixinbg11.png">医院简介</a></li>
 					<li><a href="#"><img src="resources/imgs/weixinbg10.png">医院公告</a></li>
 					<li><a href="#"><img src="resources/imgs/weixinbg03.png">专家查询</a></li>
 					<li><a href="#"><img src="resources/imgs/weixinbg07.png">在线咨询</a></li>
