--- a/微信官网/html/新闻详细页.html
+++ b/微信官网/html/新闻详细页.html
@@ -19,13 +19,26 @@
 			<a href="index.html" class="to-home"></a>
 			<h1>医院简介</h1>
 		</header>
-		<ul class="list clearfix list-icon">
-			<li><a href="医院简介详细页.html" class="list-link1">医院简介</a></li>
-			<li><a href="科室介绍.html" class="list-link2">科室介绍</a></li>
-			<li><a href="#" class="list-link3">专家介绍</a></li>
-			<li><a href="特色诊疗.html" class="list-link4">特色诊疗</a></li>
-			<li><a href="#" class="list-link5">医疗设备</a></li>
-		</ul>
+		<div class="article">
+			<div class="sub-title">
+				2015-05-07 &nbsp;&nbsp; 部门名称 &nbsp;&nbsp; <span>发布的单位名称...</span>
+			</div>
+			<article>
+				<img src="resources/imgs/demo-2.jpg" alt="" />
+				<p>医院简介内容医院简介内容医院简介内容医院简介医院简
+介内容医院简介内容医院简介内容医院简介内容医院简介内容
+医院简介内容医院简介内容医院简介内容医院简介内容医院简
+介内容医院简介内容医院简介内容医院简介内容医院简介内容
+医院.
+				</p>
+				<p>医院简介内容医院简介内容医院简介内容医院简介医院简
+介内容医院简介内容医院简介内容医院简介内容医院简介内容
+医院简介内容医院简介内容医院简介内容医院简介内容医院简
+介内容医院简介内容医院简介内容医院简介内容医院简介内容
+医院.
+				</p>
+			</article>
+		</div>
 		<footer>© 2015 鄞州区第三医院</footer>
 	</div>
 </body>
