--- a/微信官网/html/医院简介.html
+++ b/微信官网/html/医院简介.html
@@ -22,9 +22,9 @@
 		<ul class="list clearfix list-icon">
 			<li><a href="医院简介详细页.html" class="list-link1">医院简介</a></li>
 			<li><a href="科室介绍.html" class="list-link2">科室介绍</a></li>
-			<li><a href="#" class="list-link3">专家介绍</a></li>
+			<li><a href="专家查询.html" class="list-link3">专家介绍</a></li>
 			<li><a href="特色诊疗.html" class="list-link4">特色诊疗</a></li>
-			<li><a href="#" class="list-link5">医疗设备</a></li>
+			<li><a href="医疗设备.html" class="list-link5">医疗设备</a></li>
 		</ul>
 		<footer>© 2015 鄞州区第三医院</footer>
 	</div>
