--- a/微信官网/html/挂号详细.html
+++ b/微信官网/html/挂号详细.html
@@ -17,30 +17,36 @@
 		<header class="header">
 			<a href="javascript:history.go(-1);" class="go-back">返回</a>		
 			<a href="index.html" class="to-home"></a>
-			<h1>科室介绍</h1>
+			<h1>挂号详细</h1>
 		</header>
-		<div class="search-box clearfix ">
-			<input type="text" placeholder="请输入科室名称" class="search-txt" /> <input type="button" class="search-btn" value="搜索" />
+		<div class="reservation-info">
+			<span>妇产科</span>
+			<span>林大大</span>
+			<span>主任医师</span>
 		</div>
-		<ul class="list clearfix sections-icon">
-			<li><a href="妇产科详细页.html">妇产科</a></li>
-			<li><a href="#">眼科</a></li>
-			<li><a href="#">内科</a></li>
-			<li><a href="#">儿科</a></li>
-			<li><a href="#">普外科一（微创外科中心）</a></li>
-			<li><a href="#">放射科</a></li>
-			<li><a href="#">心电、超声科</a></li>
-			<li><a href="#">五官口腔科</a></li>
-			<li><a href="#">检验科</a></li>
-			<li><a href="#">手术室</a></li>
-			<li><a href="#">中医科</a></li>
-			<li><a href="#">骨科</a></li>
-			<li><a href="#">心理卫生门诊</a></li>
-			<li><a href="#">肛肠外科</a></li>
-			<li><a href="#">中医外科</a></li>
-			<li><a href="#">泌尿外科</a></li>
-			<li><a href="#">脊柱外科</a></li>
-		</ul>
+		<div class="table">
+			<table>
+				<thead>
+					<tr>
+						<th>预约时间</th>
+						<th>预约号</th>
+						<th>费用</th>
+						<th>预约规则</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>
+							<span class="block">2015-03-23</span><span class="block">星期一</span><span class="block">上午</span>
+		                </td>
+						<td>18</td>
+						<td>15</td>
+						<td><a href="挂号预约规则.html" class="reservation">点击查看</a></td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+		<a href="挂号预约规则.html" class="reservation big-btn">确认预约</a>
 		<footer>© 2015 鄞州区第三医院</footer>
 	</div>
 </body>
