--- a/微信官网/html/特色诊疗.html
+++ b/微信官网/html/特色诊疗.html
@@ -17,7 +17,7 @@
 		<header class="header">
 			<a href="javascript:history.go(-1);" class="go-back">返回</a>		
 			<a href="index.html" class="to-home"></a>
-			<h1>医院简介</h1>
+			<h1>特色诊疗</h1>
 		</header>
 		<ul class="list clearfix list-news">
 			<li>
