--- a/微信官网/html/在线咨询-我要提问.html
+++ b/微信官网/html/在线咨询-我要提问.html
@@ -17,30 +17,15 @@
 		<header class="header">
 			<a href="javascript:history.go(-1);" class="go-back">返回</a>		
 			<a href="index.html" class="to-home"></a>
-			<h1>科室介绍</h1>
+			<h1>在线咨询-我要提问</h1>
 		</header>
-		<div class="search-box clearfix ">
-			<input type="text" placeholder="请输入科室名称" class="search-txt" /> <input type="button" class="search-btn" value="搜索" />
+		<div class="search-box clearfix mb10 ask-question">
+			<input type="text" placeholder="提问人（必填）" class="search-txt">
+			<input type="text" placeholder="请输入您的问题" class="search-txt">
+			<input type="text" placeholder="请输入您的身份证号" class="search-txt">
+			<p class="notes">注：未填写身份证号的提问为匿名提问，在在线咨询界面只能通过搜索类似问题找到自己的提问。填写身份信息的提问可以在“我的问题”界面直接看到院方对您问题的回复内容。</p>
 		</div>
-		<ul class="list clearfix sections-icon">
-			<li><a href="妇产科详细页.html">妇产科</a></li>
-			<li><a href="#">眼科</a></li>
-			<li><a href="#">内科</a></li>
-			<li><a href="#">儿科</a></li>
-			<li><a href="#">普外科一（微创外科中心）</a></li>
-			<li><a href="#">放射科</a></li>
-			<li><a href="#">心电、超声科</a></li>
-			<li><a href="#">五官口腔科</a></li>
-			<li><a href="#">检验科</a></li>
-			<li><a href="#">手术室</a></li>
-			<li><a href="#">中医科</a></li>
-			<li><a href="#">骨科</a></li>
-			<li><a href="#">心理卫生门诊</a></li>
-			<li><a href="#">肛肠外科</a></li>
-			<li><a href="#">中医外科</a></li>
-			<li><a href="#">泌尿外科</a></li>
-			<li><a href="#">脊柱外科</a></li>
-		</ul>
+		<a href="#" class="reservation big-btn">提交</a>
 		<footer>© 2015 鄞州区第三医院</footer>
 	</div>
 </body>
