--- a/微信官网/html/index.html
+++ b/微信官网/html/index.html
@@ -44,9 +44,9 @@
 					<li><a href="专家查询.html"><img src="resources/imgs/weixinbg03.png">专家查询</a></li>
 					<li><a href="在线咨询.html"><img src="resources/imgs/weixinbg07.png">在线咨询</a></li>
 					<li><a href="预防接种.html"><img src="resources/imgs/weixinbg09.png">预防接种</a></li>
-					<li><a href="#"><img src="resources/imgs/weixinbg04.png">满意度调查</a></li>
+					<li><a href="满意度调查.html"><img src="resources/imgs/weixinbg04.png">满意度调查</a></li>
 					<li><a href="科室介绍.html"><img src="resources/imgs/weixinbg01.png">自助挂号</a></li>					
-					<li><a href="#"><img src="resources/imgs/weixinbg02.png">报告查询</a></li>					
+					<li><a href="报告查询.html"><img src="resources/imgs/weixinbg02.png">报告查询</a></li>					
 				</ul>
 			</div>
 
