--- a/微信官网/html/微社区.html
+++ b/微信官网/html/微社区.html
@@ -68,7 +68,15 @@
 				</div>
 			</li>
 		</ul>
-		<footer><a href="#">发话题</a></footer>
+
+		<footer><a href="微社区-发表话题.html" class="publish">发话题</a></footer>
 	</div>
+	<div class="reply-bg"></div>
+	<div class="reply">
+		<textarea  class="search-txt">
+			
+		</textarea>
+	</div>
+	
 </body>
 </html>
