--- a/微信官网/html/微社区详情页.html
+++ b/微信官网/html/微社区详情页.html
@@ -21,17 +21,18 @@
 		</header>
 		<ul class="community-list">
 			<li class="community-item">
-				<div class="community-item-header" onclick="window.location.href='微社区详情页.html'">
+				<div class="community-item-header">
 					<img class="avatar" src="resources/imgs/default.jpg" />
 					<h3>用户名</h3>
 					<span class="time">2015-05-11 22:51</span>
 				</div>
-				<p class="community-txt" onclick="window.location.href='微社区详情页.html'">欢迎来到【鄞州区第三医院】微社区，大家可以在这里进行健康信息交流、发表健康观点，以及对鄞州区第三医院的微信建议！</p>
+				<p class="community-txt">欢迎来到【鄞州区第三医院】微社区，大家可以在这里进行健康信息交流、发表健康观点，以及对鄞州区第三医院的微信建议！</p>				
 				<div class="comment-box">
 					<a href="#" class="like"><i>5</i></a>
 					<a href="#" class="coment"><i>8</i></a>
 				</div>
-				<ul class="comment-list" onclick="window.location.href='微社区详情页.html'">
+				<h4>全部回复</h4>
+				<ul class="comment-list">
 					<li>
 						<img class="avatar" src="resources/imgs/default.jpg" />
 						<p>
@@ -55,21 +56,9 @@
 					</li>
 				</ul>
 			</li>
-			<li class="community-item">
-				<div class="community-item-header" onclick="window.location.href='微社区详情页.html'">
-					<img class="avatar" src="resources/imgs/default.jpg" />
-					<h3>用户名</h3>
-					<span class="time">2015-05-11 22:51</span>
-				</div>
-				<p class="community-txt" onclick="window.location.href='微社区详情页.html'">欢迎来到【鄞州区第三医院】微社区，大家可以在这里进行健康信息交流、发表健康观点，以及对鄞州区第三医院的微信建议！</p>
-				<div class="comment-box">
-					<a href="#" class="like"><i>赞</i></a>
-					<a href="#" class="coment"><i>0</i></a>
-				</div>
-			</li>
 		</ul>
 
-		<footer><a href="微社区-发表话题.html" class="publish">发话题</a></footer>
+		<footer><a href="javascript:void(0)" class="publish coment">回复</a></footer>
 	</div>
 	<div id="reply" style="display:none;">
 		<div class="reply-bg" id="replyBg"></div>
