--- a/微信官网/html/预约接种详细页.html
+++ b/微信官网/html/预约接种详细页.html
@@ -43,18 +43,43 @@
 			</table>
 		</div>
 		<div class="search-box clearfix ask-question">
-			<input type="text" placeholder="请输入您孩子的真实姓名" class="search-txt">
-			<span class="label">孩子性别：</span>
-			<label>
-				<input type="radio" name="sex" /> 男
-			</label>
-			<label>
-				<input type="radio" name="sex" /> 女
-			</label>
-			<input type="text" placeholder="请输入您的手机号码" class="search-txt">
-			<input type="text" placeholder="请输入父亲的身份证号" class="search-txt">
-			<input type="text" placeholder="请输入母亲的身份证号" class="search-txt">
-			<input type="text" placeholder="请输入接种证号" class="search-txt">
+			<div class="form-item">
+				<span class="form-title">孩子姓名:</span>
+				<span class="form-input">
+					<input type="text" placeholder="请输入您孩子的真实姓名" />
+				</span>
+			</div>
+			<div class="form-item">
+				<span class="form-title">孩子性别:</span>
+				<span class="form-input">
+					<label><input type="radio" name="sex" /> 男</label>
+					<label><input type="radio" name="sex" /> 女</label>
+				</span>
+			</div>
+			<div class="form-item">
+				<span class="form-title">手机号码:</span>
+				<span class="form-input">
+					<input type="text" placeholder="请输入您的手机号码" />
+				</span>
+			</div>
+			<div class="form-item">
+				<span class="form-title">父亲身份证:</span>
+				<span class="form-input">
+					<input type="text" placeholder="请输入正确的身份证号" />
+				</span>
+			</div>
+			<div class="form-item">
+				<span class="form-title">母亲身份证:</span>
+				<span class="form-input">
+					<input type="text" placeholder="请输入正确的身份证号" />
+				</span>
+			</div>
+			<div class="form-item">
+				<span class="form-title">接种证号:</span>
+				<span class="form-input">
+					<input type="text" placeholder="请输入正确的接种证号" />
+				</span>
+			</div>
 		</div>
 		<a href="挂号预约规则.html" class="reservation big-btn">确认预约</a>
 		<footer>© 2015 鄞州区第三医院</footer>
