--- a/微信官网/html/index.html
+++ b/微信官网/html/index.html
@@ -21,10 +21,10 @@
 	<script type="text/javascript" src="resources/js/iscroll.js"></script>
 	-->
 </head>
-<body  onselectstart="return true;" ondragstart="return false;">
+<body onselectstart="return true;" ondragstart="return false;">
 	<div class="body" id="body">
 		<div class="bg_black"></div>
-		<h1><img src="resources/imgs/logo.png" alt="鄞州区第三医院" /></h1>
+		<!-- <h1><img src="resources/imgs/logo.png" alt="鄞州区第三医院" /></h1> -->
 		<header style="overflow:hidden;">
 			<div class="clearfix">
 				<div id="scroll">
@@ -41,16 +41,16 @@
 				<ul>
 					<li><a href="医院简介.html"><img src="resources/imgs/weixinbg11.png">医院简介</a></li>
 					<li><a href="医院公告.html"><img src="resources/imgs/weixinbg10.png">医院公告</a></li>
-					<li><a href="专家查询.html"><img src="resources/imgs/weixinbg03.png">专家查询</a></li>
+					<li><a href="专家介绍.html"><img src="resources/imgs/weixinbg03.png">专家介绍</a></li>
 					<li><a href="在线咨询.html"><img src="resources/imgs/weixinbg07.png">在线咨询</a></li>
 					<li><a href="预防接种.html"><img src="resources/imgs/weixinbg09.png">预防接种</a></li>
 					<li><a href="满意度调查.html"><img src="resources/imgs/weixinbg04.png">满意度调查</a></li>
-					<li><a href="科室介绍.html"><img src="resources/imgs/weixinbg01.png">自助挂号</a></li>					
+					<li><a href="自助挂号.html"><img src="resources/imgs/weixinbg01.png">自助挂号</a></li>					
 					<li><a href="报告查询.html"><img src="resources/imgs/weixinbg02.png">报告查询</a></li>					
 				</ul>
 			</div>
 
-			<hr style="width:100%;margin-bottom: 10px;" />
+			<hr style="width:100%;margin-bottom: 8px;" />
 
 			<section style="width:95%; margin:0px auto;">
 				<div id="mcover" onclick="document.getElementById('mcover').style.display='';" >
