--- a/微信官网/html/医院简介详细页.html
+++ b/微信官网/html/医院简介详细页.html
@@ -14,11 +14,7 @@
 </head>
 <body>
 	<div class="wrap">
-		<header class="header">
-			<a href="javascript:history.go(-1);" class="go-back">返回</a>		
-			<a href="index.html" class="to-home"></a>
-			<h1>医院简介</h1>
-		</header>
+		<h1 class="article-title">医院简介</h1>
 		<div class="article">
 			<div class="sub-title">
 				2015-05-07 &nbsp;&nbsp; 部门名称 &nbsp;&nbsp; <span>发布的单位名称...</span>
