--- a/微信官网/html/医院简介.html
+++ b/微信官网/html/医院简介.html
@@ -14,11 +14,6 @@
 </head>
 <body>
 	<div class="wrap">
-		<header class="header">
-			<a href="javascript:history.go(-1);" class="go-back">返回</a>		
-			<a href="index.html" class="to-home"></a>
-			<h1>医院简介</h1>
-		</header>
 		<ul class="list clearfix list-icon">
 			<li><a href="医院简介详细页.html" class="list-link1">医院简介</a></li>
 			<li><a href="科室介绍.html" class="list-link2">科室介绍</a></li>
@@ -26,7 +21,8 @@
 			<li><a href="特色诊疗.html" class="list-link4">特色诊疗</a></li>
 			<li><a href="医疗设备.html" class="list-link5">医疗设备</a></li>
 		</ul>
-		<footer>© 2015 鄞州区第三医院</footer>
+		<footer>
+		<a href="javascript:history.go(-1);" class="go-back">&nbsp;</a><a href="index.html" class="to-home"></a>© 2015 鄞州区第三医院</footer>
 	</div>
 </body>
 </html>
