--- a/微信官网/html/专家介绍.html
+++ b/微信官网/html/专家介绍.html
@@ -47,14 +47,14 @@
 						<td>
 							内科
                         </td>
-						<td><a href="专家查询.html" class="blue">陆莉莉</a></td>
+						<td><a href="专家详情页.html" class="blue">陆莉莉</a></td>
 						<td>副主任医师</td>
 					</tr>
 					<tr>
 						<td>
 							内科
                         </td>
-						<td><a href="专家查询.html" class="blue">陆莉莉</a></td>
+						<td><a href="专家详情页.html" class="blue">陆莉莉</a></td>
 						<td>副主任医师</td>
 					</tr>
 				</tbody>
@@ -75,14 +75,14 @@
 						<td>
 							内科
                         </td>
-						<td><a href="专家查询.html" class="blue">陆莉莉</a></td>
+						<td><a href="专家详情页.html" class="blue">陆莉莉</a></td>
 						<td>副主任医师</td>
 					</tr>
 					<tr>
 						<td>
 							内科
                         </td>
-						<td><a href="专家查询.html" class="blue">陆莉莉</a></td>
+						<td><a href="专家详情页.html" class="blue">陆莉莉</a></td>
 						<td>副主任医师</td>
 					</tr>
 				</tbody>
