--- a/微信官网/html/医疗设备.html
+++ b/微信官网/html/医疗设备.html
@@ -20,14 +20,14 @@
 			<h1>医疗设备</h1>
 		</header>
 		<ul class="clearfix list-imgs">
-			<li><a href="医疗设备详细页.html"><img src="resources/imgs/demo-4.png" />全自动尿沉渣干化学一体机</a></li>
-			<li><a href="医疗设备详细页.html"><img src="resources/imgs/demo-5.png" />奥林巴斯全自动生化分析仪</a></li>
-			<li><a href="医疗设备详细页.html"><img src="resources/imgs/demo-4.png" />全自动尿沉渣干化学一体机</a></li>
-			<li><a href="医疗设备详细页.html"><img src="resources/imgs/demo-5.png" />奥林巴斯全自动生化分析仪</a></li>
-			<li><a href="医疗设备详细页.html"><img src="resources/imgs/demo-4.png" />全自动尿沉渣干化学一体机</a></li>
-			<li><a href="医疗设备详细页.html"><img src="resources/imgs/demo-5.png" />奥林巴斯全自动生化分析仪</a></li>
-			<li><a href="医疗设备详细页.html"><img src="resources/imgs/demo-4.png" />全自动尿沉渣干化学一体机</a></li>
-			<li><a href="医疗设备详细页.html"><img src="resources/imgs/demo-5.png" />奥林巴斯全自动生化分析仪</a></li>
+			<li><a href="医疗设备图片展示.html"><img src="resources/imgs/demo-4.png" />全自动尿沉渣干化学一体机</a></li>
+			<li><a href="医疗设备图片展示.html"><img src="resources/imgs/demo-5.png" />奥林巴斯全自动生化分析仪</a></li>
+			<li><a href="医疗设备图片展示.html"><img src="resources/imgs/demo-4.png" />全自动尿沉渣干化学一体机</a></li>
+			<li><a href="医疗设备图片展示.html"><img src="resources/imgs/demo-5.png" />奥林巴斯全自动生化分析仪</a></li>
+			<li><a href="医疗设备图片展示.html"><img src="resources/imgs/demo-4.png" />全自动尿沉渣干化学一体机</a></li>
+			<li><a href="医疗设备图片展示.html"><img src="resources/imgs/demo-5.png" />奥林巴斯全自动生化分析仪</a></li>
+			<li><a href="医疗设备图片展示.html"><img src="resources/imgs/demo-4.png" />全自动尿沉渣干化学一体机</a></li>
+			<li><a href="医疗设备图片展示.html"><img src="resources/imgs/demo-5.png" />奥林巴斯全自动生化分析仪</a></li>
 		</ul>
 		<footer>© 2015 鄞州区第三医院</footer>
 	</div>
