--- a/微信官网/html/微社区详情页.html
+++ b/微信官网/html/微社区详情页.html
@@ -19,7 +19,7 @@
 			<a href="index.html" class="to-home"></a>
 			<h1>微社区</h1>
 		</header>
-		<ul class="community-list">
+		<ul class="community-list" style="padding:0;">
 			<li class="community-item">
 				<div class="community-item-header">
 					<img class="avatar" src="resources/imgs/default.jpg" />
@@ -32,13 +32,15 @@
 					<a href="#" class="coment"><i>8</i></a>
 				</div>
 				<h4>全部回复</h4>
-				<ul class="comment-list">
+				<div class="line"><span></span></div>
+				<ul class="comment-list" style="background:none; border:none;">
 					<li>
 						<img class="avatar" src="resources/imgs/default.jpg" />
 						<p>
 							<span>用户名：</span>
 							您好，请您拨打我们的电话进行咨询。
 						</p>
+						<p class="comment-box"><i class="fl">2015-05-12</i> <a href="#" class="like"><i>5</i></a></p>
 					</li>
 					<li>
 						<img class="avatar" src="resources/imgs/default.jpg" />
@@ -46,6 +48,7 @@
 							<span>用户名：</span>
 							您好，请您拨打我们的电话进行咨询。
 						</p>
+						<p class="comment-box"><i class="fl">2015-05-12</i> <a href="#" class="like"><i>5</i></a></p>
 					</li>
 					<li>
 						<img class="avatar" src="resources/imgs/default.jpg" />
@@ -53,10 +56,13 @@
 							<span>用户名：</span>
 							您好，请您拨打我们的电话进行咨询。
 						</p>
+						<p class="comment-box"><i class="fl">2015-05-12</i> <a href="#" class="like"><i>5</i></a></p>
 					</li>
 				</ul>
 			</li>
 		</ul>
+
+		<p class="all-shown">已显示全部</p>
 
 		<footer><a href="javascript:void(0)" class="publish coment">回复</a></footer>
 	</div>
