--- a/微信官网/html/满意度调查.html
+++ b/微信官网/html/满意度调查.html
@@ -112,6 +112,10 @@
 			</div>
 			<span class="label">意见反馈:</span>
 			<textarea class="search-txt" style="height:100px;" placeholder="请输入您的意见"></textarea>
+			<span class="label">照片/截图:</span>
+			<div class="col99 upload">
+				<span><input type="file" /></span>
+			</div>
 		</div>
 		<input type="button" value="提交" class="reservation big-btn" />
 		<footer>© 2015 鄞州区第三医院</footer>
