--- a/微信官网/html/专家详情页.html
+++ b/微信官网/html/专家详情页.html
@@ -14,57 +14,41 @@
 </head>
 <body>
 	<div class="wrap">
-		<ul class="info mt10">
-			<li style="border:none;">
+		<div class="header-tab expert">基本信息</div>
+		<ul class="info">
+			<li style="border:none; padding:0; margin:0;">
 				<table>
 					<tr>
-						<td class="info-header">
-							<img src="resources/imgs/demo-3.png" />
-							
+						<td width="80" class="info-header">
+							<img src="resources/imgs/demo-3.png" />							
 						</td>
 						<td>
-							<span class="intro-txt">
-							科室：妇产科<br />
-							姓名：林大大<br />
-							职称：主任医师<br />
+							<span class="intro-txt">							
+							<i>姓名：</i>葛小红<br />
+							<i>科室名称：</i>妇产科<br />
+							<i>主攻学科：</i>妇产科<br />
 							</span>
-							<p>
-								从事心血管内科临床、教学工作30余年，临床经验丰富，擅长心内科的高血压、高血脂、冠心病及心肌病等疾病的诊治，退休后到华慈医院从事心血管内科门诊工作。
-							</p>
+							<span class="intro-txt">
+							<i>学历：</i>本科<br />
+							<i>职称：主任医师</i><br />
+							<i>预约挂号电话：</i>
+							</span>
+							<span class="intro-txt-block"><i>擅长治疗：</i>擅长妇科宫腔镜、腹腔镜手术及经阴道手术系列</span>
+							<span class="intro-txt">
+								<i>网上挂号：</i>
+							</span>
+							<span class="intro-txt">
+								<i>坐诊时间：</i>
+							</span>
 						</td>
 					</tr>
 				</table>
-				<div class="table">
-					<table>
-						<tr>
-		                    <th>学历</th>
-		                    <th>主攻学科</th>
-		                    <th>预约挂号电话</th>
-		                </tr>
-						<tr>
-							<td>
-								博士
-	                        </td>
-							<td>什么学科</td>
-							<td>0574-88888888</td>
-						</tr>
-						<tr>
-		                    <th>擅长治疗</th>
-		                    <th>网上挂号</th>
-		                    <th>坐诊时间</th>
-		                </tr>
-						<tr>
-							<td>
-								心血管疾病
-	                        </td>
-							<td>网上挂号</td>
-							<td>周一全天</td>
-						</tr>
-					</table>
-				</div>
 			</li>
 		</ul>
-		
+		<div class="header-tab expert">简历</div>
+		<p style="padding:10px;">鄞州二院妇产科专家。自1991年起一直从事妇产科专业临床工作，擅长妇科宫腔镜、腹腔镜手术及经阴道手术系列，在妇科肿瘤、不孕症的治疗上具有丰富的临床经验。目前从鄞州二院委派到我院，开展妇产科住院临床工作，并承担妇产科急救和临床教学、科研业务。</p>
+		<div class="header-tab expert">研究方向及医疗成果</div>
+		<p style="padding:10px;">妇产科</p>
 		<footer>© 2015 鄞州区第三医院</footer>
 	</div>
 </body>
