--- a/学习微信网站/html/index.html
+++ b/学习微信网站/html/index.html
@@ -71,7 +71,7 @@
 		<footer>
 			<a href="home.html"><i></i>我的主页</a>
 			<a href="#"><i class="i2"></i>我的消息</a>
-			<a href="#"><i class="i3"></i>家庭作业</a>
+			<a href="homework.html"><i class="i3"></i>家庭作业</a>
 			<a href="#"><i class="i4"></i>成长相册</a>
 		</footer>
 	</div>
