--- a/学习微信网站/html/index.html
+++ b/学习微信网站/html/index.html
@@ -34,11 +34,11 @@
 			<div class="tab-body">
 				<div class="tab-item">
 					<ul>
-						<li><a href="#">我的消息通知列表内容我的消息通知列表内</a></li>
-						<li class="odd"><a href="#">我的消息通知列表内容我的消息通知列表内</a></li>
-						<li><a href="#">我的消息通知列表内容我的消息通知列表内</a></li>
-						<li class="odd"><a href="#">我的消息通知列表内容我的消息通知列表内</a></li>
-						<li><a href="#">我的消息通知列表内容我的消息通知列表内</a></li>
+						<li><a href="家长签收通知.html">我的消息通知列表内容我的消息通知列表内</a></li>
+						<li class="odd"><a href="家长签收通知.html">我的消息通知列表内容我的消息通知列表内</a></li>
+						<li><a href="家长签收通知.html">我的消息通知列表内容我的消息通知列表内</a></li>
+						<li class="odd"><a href="家长签收通知.html">我的消息通知列表内容我的消息通知列表内</a></li>
+						<li><a href="家长签收通知.html">我的消息通知列表内容我的消息通知列表内</a></li>
 					</ul>
 				</div>
 				<div class="tab-item">
