--- a/学习微信网站/html/在校表现.html
+++ b/学习微信网站/html/在校表现.html
@@ -21,33 +21,46 @@
 		</header>
 		<nav class="nav" id="nav">
 			<a href="#"><i></i>消息中心</a>
-			<a href="homework.html"><i class="n-1"></i>家庭作业</a>
+			<a href="#"><i class="n-1"></i>家庭作业</a>
 			<a href="#"><i class="n-2"></i>成长相册</a>
-			<a href="在校表现.html"><i class="n-3"></i>在校表现</a>
+			<a href="#"><i class="n-3"></i>在校表现</a>
 			<a href="#"><i class="n-4"></i>学校活动</a>
-			<a href="班费管理.html"><i class="n-5"></i>班费管理</a>
+			<a href="#"><i class="n-5"></i>在线互动</a>
 			<a href="#"><i class="n-6"></i>设置中心</a>
 		</nav>
 		<div class="main-body" id="main">
 			<header class="main-title">
-				<h3>通知公告</h3>
-				<a href="add-notice.html" class="btn">发布公告</a>
+				<h3>在校表现</h3>
+				<a href="在校表现-发布.html" class="btn">发布表现</a>
 			</header>
-			<ul class="main-list">
-				<li><a href="#">我的消息通知列表内容我的消息通知列表</a></li>
-				<li class="odd"><a href="#">我的消息通知列表内容我的消息通知列表</a></li>
-				<li><a href="#">我的消息通知列表内容我的消息通知列表</a></li>
-				<li class="odd"><a href="#">我的消息通知列表内容我的消息通知列表</a></li>
-				<li><a href="#">我的消息通知列表内容我的消息通知列表</a></li>
-				<li class="odd"><a href="#">我的消息通知列表内容我的消息通知列表</a></li>
-				<li><a href="#">我的消息通知列表内容我的消息通知列表</a></li>
-				<li class="odd"><a href="#">我的消息通知列表内容我的消息通知列表</a></li>
-				<li><a href="#">我的消息通知列表内容我的消息通知列表</a></li>
-				<li class="odd"><a href="#">我的消息通知列表内容我的消息通知列表</a></li>
-				<li><a href="#">我的消息通知列表内容我的消息通知列表</a></li>
-				<li class="odd"><a href="#">我的消息通知列表内容我的消息通知列表</a></li>
-				<li><a href="#">我的消息通知列表内容我的消息通知列表</a></li>
-				<li class="odd"><a href="#">我的消息通知列表内容我的消息通知列表</a></li>
+			<ul class="homework-list" id="homework">
+				<li onclick="window.location.href='在校表现-回复.html'">
+					<h4 class="homework-title school-behavior"><span>在校表现标题</span></h4>
+					<div class="homework-content">
+						<p>
+							<span class="time">5月19日 08：30 -11：30</span>
+							在校表现内容<br />在校表现内容。<br />在校表现内容。
+						</p>
+					</div>
+				</li>
+				<li onclick="window.location.href='在校表现-回复.html'">
+					<h4 class="homework-title school-behavior"><span>在校表现标题</span></h4>
+					<div class="homework-content">
+						<p>
+							<span class="time">5月19日 08：30 -11：30</span>
+							在校表现内容<br />在校表现内容。<br />在校表现内容。
+						</p>
+					</div>
+				</li>
+				<li onclick="window.location.href='在校表现-回复.html'">
+					<h4 class="homework-title school-behavior"><span>在校表现标题</span></h4>
+					<div class="homework-content">
+						<p>
+							<span class="time">5月19日 08：30 -11：30</span>
+							在校表现内容<br />在校表现内容。<br />在校表现内容。
+						</p>
+					</div>
+				</li>
 			</ul>
 		</div>
 		<footer>
@@ -57,7 +70,4 @@
 		</footer>
 	</div>
 </body>
-<script type="text/javascript">
-$(function() {});
-</script>
 </html>
